--- a/playbook/ansible.cfg
+++ b/playbook/ansible.cfg
@@ -3,6 +3,7 @@ ansible_managed = Ansible managed: {file} modified on %Y-%m-%d %H:%M:%S by {uid}
 inventory = hosts
 remote_user = root
 private_key_file = ~/.ssh/id_rsa
+pipelining = True
 
 [ssh_connection]
-ssh_args =  -o IdentitiesOnly=yes -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no
+ssh_args =  -o IdentitiesOnly=yes -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no -o ControlPersist=4h
