ansible updates: theano support; Change nvdia driver url

--- a/playbook/ansible.cfg
+++ b/playbook/ansible.cfg
@@ -6,4 +6,4 @@ private_key_file = ~/.ssh/id_rsa
 pipelining = True
 
 [ssh_connection]
-ssh_args =  -o IdentitiesOnly=yes -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no -o ControlPersist=4h
+ssh_args =  -o IdentitiesOnly=yes -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no -o ControlPersist=4h -o ServerAliveInterval=240
