--- a/playbook/roles/libs/tasks/cuda.yml
+++ b/playbook/roles/libs/tasks/cuda.yml
@@ -12,8 +12,9 @@
   become_user: ml
 
 - name: Download latest CUDA deb packages
-  get_url: url=http://developer.download.nvidia.com/compute/cuda/repos/ubuntu1604/x86_64/cuda-repo-ubuntu1604_9.0.176-1_amd64.deb
-           dest=/mnt/ml/cache/cuda.deb
+  get_url:
+    url: http://developer.nvidia.com/compute/cuda/9.0/Prod/local_installers/cuda-repo-ubuntu1604-9-0-local_9.0.176-1_amd64-deb
+    dest: /mnt/ml/cache/cuda.deb
   when: downloaded.stat.exists == False
 
 - name: Add CUDA deb
