--- a/playbook/roles/libs/tasks/main.yml
+++ b/playbook/roles/libs/tasks/main.yml
@@ -4,3 +4,4 @@
  - { import_tasks: optimize.yml, tags: 'optimize' }
  - { import_tasks: conda.yml, tags: 'conda' }
  - { import_tasks: jupyter.yml, tags: 'jupyter' }
+ - { import_tasks: theano.yml, tags: theano}
