downgrade cuda to cuda8, and cudnn to cudnn5.1.10

--- a/playbook/roles/libs/tasks/cuda.yml
+++ b/playbook/roles/libs/tasks/cuda.yml
@@ -13,7 +13,7 @@
 
 - name: Download latest CUDA deb packages
   get_url:
-    url: http://developer.nvidia.com/compute/cuda/9.0/Prod/local_installers/cuda-repo-ubuntu1604-9-0-local_9.0.176-1_amd64-deb
+    url: https://developer.nvidia.com/compute/cuda/8.0/Prod2/local_installers/cuda-repo-ubuntu1604-8-0-local-ga2_8.0.61-1_amd64-deb
     dest: /mnt/ml/cache/cuda.deb
   when: downloaded.stat.exists == False
 
