--- a/playbook/roles/libs/tasks/main.yml
+++ b/playbook/roles/libs/tasks/main.yml
@@ -1,6 +1,7 @@
 ---
  - { import_tasks: nvdia_driver.yml, tags: 'nvdia_driver' }
  - { import_tasks: cuda.yml, tags: 'cuda' }
+ - { import_tasks: cudnn.yml, tags: 'cudnn' }
  - { import_tasks: optimize.yml, tags: 'optimize' }
  - { import_tasks: conda.yml, tags: 'conda' }
  - { import_tasks: jupyter.yml, tags: 'jupyter' }
