--- a/playbook/roles/libs/tasks/main.yml
+++ b/playbook/roles/libs/tasks/main.yml
@@ -5,4 +5,5 @@
  - { import_tasks: optimize.yml, tags: 'optimize' }
  - { import_tasks: conda.yml, tags: 'conda' }
  - { import_tasks: jupyter.yml, tags: 'jupyter' }
+ - { import_tasks: mxnet.yml, tags: 'mxnet' }
  - { import_tasks: theano.yml, tags: theano}
