--- a/playbook/roles/tools/tasks/miscellaneous.yml
+++ b/playbook/roles/tools/tasks/miscellaneous.yml
@@ -12,3 +12,5 @@
     - p7zip-full
     - tree
 
+- name: common | set vim as default editor
+  command: update-alternatives --set editor /usr/bin/vim.basic
