--- a/playbook/roles/tools/tasks/git.yml
+++ b/playbook/roles/tools/tasks/git.yml
@@ -1,5 +1,5 @@
 - name: Install git
-  apt: pkg=git state=installed update_cache=true
+  apt: pkg=git state=installed
 
 - name: Add git alias
   become: yes
