--- a/playbook/roles/tools/tasks/utils.yml
+++ b/playbook/roles/tools/tasks/utils.yml
@@ -11,6 +11,12 @@
     - unzip
     - p7zip-full
     - tree
+    - curl
+    - iftop
+    - iotop
+    - unrar-free
+    - bzip2
+    - bc
 
 - name: common | set vim as default editor
   command: update-alternatives --set editor /usr/bin/vim.basic
