--- a/playbook/roles/libs/tasks/main.yml
+++ b/playbook/roles/libs/tasks/main.yml
@@ -9,3 +9,5 @@
  - { import_tasks: mxnet.yml, tags: 'mxnet' }
  - { import_tasks: pytorch.yml, tags: 'pytorch' }
  - { import_tasks: theano.yml, tags: theano}
+ - { import_tasks: misc_packges.yml, tags: misc_packges}
+
