--- a/playbook/roles/libs/tasks/jupyter.yml
+++ b/playbook/roles/libs/tasks/jupyter.yml
@@ -1,10 +1,10 @@
 ---
 - name: Install nb_conda
-  command: /mnt/ml/libs/anaconda3/bin/conda install -y jupyter nb_conda nb_conda_kernels -c conda-forge
+  command: '{{conda_directory}}//bin/conda install -y jupyter nb_conda nb_conda_kernels -c conda-forge'
   become_user: ml
 
 - name: Enable conda kernels
-  command: /mnt/ml/libs/anaconda3/bin/python -m nb_conda_kernels.install --enable
+  command: '{{conda_directory}}/bin/python -m nb_conda_kernels.install --enable'
   become_user: ml
 
 - name: Copy jupyter notebook config file to instance
@@ -13,4 +13,8 @@
 
 - name: Create cerificate and key
   shell: openssl req -x509 -nodes -days 365 -newkey rsa:1024 -keyout ~/.jupyter/mykey.key -out ~/.jupyter/mycert.pem -subj "/C=NL"
+  become_user: ml
+
+- name: Install notedown
+  command: '{{conda_directory}}/bin/pip install notedown'
   become_user: ml
