--- a/playbook/roles/libs/tasks/optimize.yml
+++ b/playbook/roles/libs/tasks/optimize.yml
@@ -7,8 +7,8 @@
 - name: Disable the autoboost feature for all GPUs on the instance.
   shell: nvidia-smi --auto-boost-default=0
 
-# - name: Set all GPU clock speeds to their maximum frequency.
-#   shell: nvidia-smi -ac 2505,875
+- name: Set all GPU clock speeds to their maximum frequency.
+  shell: nvidia-smi -ac 715,1328
 
 # - name: Killing libdc1394 warning
 #   file: src=/dev/null dest=/dev/raw1394 state=link
