--- a/playbook/roles/tools/tasks/utils.yml
+++ b/playbook/roles/tools/tasks/utils.yml
@@ -17,6 +17,7 @@
     - unrar-free
     - bzip2
     - bc
+    - ack-grep
 
 - name: common | set vim as default editor
   command: update-alternatives --set editor /usr/bin/vim.basic
