--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,6 @@ aliyun-python-sdk-core-v3; python_version >= '3'
 aliyun-python-sdk-core; python_version < '3'
 aliyun-python-sdk-ecs
 click
+mkdocs
+tabulate
+tenacity
