--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,6 +1,6 @@
 site_name: 阿里云 ECS 机器学习懒人包
 pages:
-    - 首页: index.md
+    - 缘起: index.md
     - 准备工作: preparing.md
     - 怎样选择最合适的实例: choose_instance.md
     - 实战: hands_on.md
